# NeuralNet

./: LICENSE  Network.py  Neuron.py  README.md  pyproject.toml
src/NeuralNet/: Layer.py  Network.py  Neuron.py  activation_functions.py  impl.py  random_adjustment_training.py  random_training.py
src/NeuralNet/accuracy/: Accuracy.py
src/NeuralNet/activation/: Activation.py  RectangularLinear.py  Sigmoid.py  Softmax.py  Step.py  __init__.py
src/NeuralNet/layer/: Dense.py
src/NeuralNet/loss/: CatCrossEntropy.py  Loss.py  __init__.py
src/NeuralNet/old/: Layer.py  Network.py  Neuron.py  activation_functions.py  impl.py  loss_functions.py
