[tool.poetry]
name = "neuralnet"
version = "0.1.0"
description = ""
authors = ["Keegan Birt <kbirt@birtdata.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.1"
nnfs = "^0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
